feat: menambah profil path di settings
